2007-02-02  Sven Neumann  <sven@gimp.org>

	* app/app_procs.[ch]: renamed to app/app.[ch].

	* app/Makefile.am
	* app/main.c: changed accordingly.

2007-02-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mosaic.c (find_gradients): fixed problem pointed
	out in bug #403580.

2007-02-02  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpitemtreeview.c (gimp_item_tree_view_toggle_clicked):
	changed function signature according to changes in internal undo API.

2007-02-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimageundo.[ch]
	* app/core/gimpitempropundo.[ch]: implement image and item
	parasite attach and remove undos. They are image/item properties
	after all.

	* app/core/gimpimage-undo-push.[ch]: use them here and move the
	undo functions to the resp. image and item property sections.

2007-02-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c
	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/common/CML_explorer.c
	* plug-ins/common/channel_mixer.c
	* plug-ins/common/gqbist.c
	* plug-ins/common/spheredesigner.c
	* plug-ins/flame/flame.c
	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gimpressionist/brush.c
	* plug-ins/ifscompose/ifscompose.c
	* plug-ins/imagemap/imap_file.c
	* plug-ins/metadata/interface.c
	* plug-ins/script-fu/script-fu-console.c: set
	do-overwrite-confirmation on file save dialogs and removed custom
	confirmation dialogs where present.

2007-02-02  Sven Neumann  <sven@gimp.org>

	* app/actions/error-console-commands.c
	* app/actions/gradients-commands.c
	* app/actions/text-editor-commands.c
	* app/dialogs/vectors-export-dialog.c
	* app/dialogs/vectors-import-dialog.c
	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_settings_dialog):
	set default response and do-overwrite-confirmation on the file
	chooser dialogs. Fixes bug #403449 for all core dialogs.

2007-02-01  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpprogressbox.c: ellipsize progress label.
