@@ -1,3 +1,9 @@
+2007-02-03  Mukund Sivaraman  <muks@mukund.org>
+
+	* plug-ins/common/psd.c
+	* plug-ins/common/psd_save.c: Made fseek() and ftell() use glong
+	for offsets instead of gint32
+
 2007-02-02  Sven Neumann  <sven@gimp.org>
 
 	* app/app_procs.[ch]: renamed to app/app.[ch].
